[package]
name = "atomic-slot"
version = "0.1.0"
edition = "2024"
authors = [
    "Troy Neubauer <troyneubauer@gmail.com>",
]
repository = "https://github.com/TroyNeubauer/atomic-slot"
readme = "README.md"
documentation = "https://docs.rs/atomic-slot/"
description = "A simple, lock-free, atomic slot for transferring ownership of Box<T>"
license = "MIT"
keywords = ["atomic", "cell", "slot"]
categories = ["data-structures"]

[features]
default = ["std"]
std = []

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
